Work on integrating Jupyter notebooks into Sphinx site.

--- a/source/notebooks/lecture01.ipynb
+++ b/source/notebooks/lecture01.ipynb
@@ -1,18 +1,16 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Welcome to ChE 696, On-Ramp to Data Science!\n",
     "\n",
     "## Topics for today:\n",
-    "- Motivation for this class\n",
-    "- What is data science?\n",
-    "- What we will cover in this class\n",
-    "- Get started with terminals and jupyter notebooks\n",
+    "* Motivation for this class\n",
+    "* What is data science?\n",
+    "* What we will cover in this class\n",
+    "* Get started with terminals and jupyter notebooks\n",
     "\n",
     "This and all other lectures will be available here: https://team-mayes.github.io/che_696/html/index.html\n",
     "\n",
@@ -81,10 +79,10 @@
     "# What is the path to \"Data Acumen\"?\n",
     "\n",
     "NAS reports inform this course and the following in the sequence. They suggest that DS curricula focus on:\n",
-    "- Strong analytical basis\n",
-    "- Oral and written communication\n",
-    "- Use real, \"messy\" data\n",
-    "- Show applications with broad impact\n",
+    "* Strong analytical basis\n",
+    "* Oral and written communication\n",
+    "* Use real, \"messy\" data\n",
+    "* Show applications with broad impact\n",
     "* Discuss ethical implications, such as unreliable and/or biased outcomes\n",
     "    * https://www.nature.com/news/there-is-a-blind-spot-in-ai-research-1.20805\n",
     "    * https://www.nature.com/articles/d41586-018-05469-3\n",
