--- a/source/notebooks/lecture01_intro.ipynb
+++ b/source/notebooks/lecture01_intro.ipynb
@@ -7,10 +7,10 @@
     "# Welcome to ChE 696, On-Ramp to Data Science!\n",
     "\n",
     "## Topics for today:\n",
-    "* Motivation for this class\n",
-    "* What is data science?\n",
-    "* What we will cover in this class\n",
-    "* Get started with terminals and jupyter notebooks\n",
+    "- Motivation for this class\n",
+    "- What is data science?\n",
+    "- What we will cover in this class\n",
+    "- Get started with terminals and jupyter notebooks\n",
     "\n",
     "This and all other lectures will be available here: https://team-mayes.github.io/che_696/html/index.html\n",
     "\n",
@@ -79,10 +79,10 @@
     "# What is the path to \"Data Acumen\"?\n",
     "\n",
     "NAS reports inform this course and the following in the sequence. They suggest that DS curricula focus on:\n",
-    "* Strong analytical basis\n",
-    "* Oral and written communication\n",
-    "* Use real, \"messy\" data\n",
-    "* Show applications with broad impact\n",
+    "- Strong analytical basis\n",
+    "- Oral and written communication\n",
+    "- Use real, \"messy\" data\n",
+    "- Show applications with broad impact\n",
     "* Discuss ethical implications, such as unreliable and/or biased outcomes\n",
     "    * https://www.nature.com/news/there-is-a-blind-spot-in-ai-research-1.20805\n",
     "    * https://www.nature.com/articles/d41586-018-05469-3\n",
@@ -142,9 +142,9 @@
     "- This is meant to be a practical class to provide skills to improve your productivity in future endeavors\n",
     "- Please bring a laptop to each class. If you do not have one, please find a buddy with a laptop to work with\n",
     "- We will be using a variety of resources, primarily free to the public or free to you via the Michigan library\n",
-    "- HW will be assigned approximately every week, highlighting key concepts\n",
+    "- HW will be assigned approximately every week, highlighting key concepts from the in-class material and related text\n",
     "- Grading will be 20% class engagement (in-class and/or piazza), 40% HW (approx 10 assignements), and 40% quizes (approx. 4). Final grades will be based on a demonstration of mastery of the material (A = formed an excellent foundation; B = good foundation with gaps in a few areas; C = some understanding with significant gaps)\n",
-    "- All questions should be posted to Piazza, unless they truly only relate to you (e.g. illness, conflict...) so everyone can benefit from the discussion. "
+    "- All questions should be posted to Piazza, unless they truly only relate to you (e.g. illness, conflict...; then directly email me) so everyone can benefit from the discussion. "
    ]
   },
   {
@@ -153,7 +153,7 @@
    "source": [
     "# Next up....\n",
     "\n",
-    "Intro to terminal, bash, and jupyter notebooks!"
+    "Intro to bash and jupyter notebooks!"
    ]
   },
   {
@@ -163,9 +163,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    ""
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -188,5 +186,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
