--- a/source/notebooks/lecture01_shell.ipynb
+++ b/source/notebooks/lecture01_shell.ipynb
@@ -40,17 +40,69 @@
     "\n",
     "First, open a bash session (e.g. launch terminal on your mac).\n",
     "\n",
-    "Type `pwd`. What do you see?\n",
-    "\n"
+    "Enter the following commands (one at a time), and note what you see:\n",
+    "\n",
+    "```\n",
+    "pwd\n",
+    "ls\n",
+    "ls -a\n",
+    "ls -lhatr\n",
+    "man ls\n",
+    "which ls\n",
+    "```\n",
+    "\n",
+    "Use `cd` to navigate to a different directory. Then `cd` to yet another directory. \n",
+    "Now, explore what happens when you:\n",
+    "- enter only `cd`\n",
+    "- then enter `cd -`\n",
+    "- enter `cd ..`\n",
+    "\n",
+    "Other common, useful commands include:\n",
+    "```\n",
+    "cp\n",
+    "rm\n",
+    "mv\n",
+    "mkdir\n",
+    "cat\n",
+    "tail \n",
+    "head\n",
+    "wget\n",
+    "grep\n",
+    "diff\n",
+    "wc \n",
+    "```\n",
+    "There are multiple ways to learn what they do, including reading the related text, using `man`', and, of course, asking the internet. There are great tutorials for those interested in learning more (e.g. https://mse150s17.bitbucket.io/shell/), which will pay off if you are a computational researcher. For this course, make sure you learn the basics, such as practiced on HW01.\n"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "def f(x):\n",
-    "    \"\"\"a docstring\"\"\"\n",
-    "    return x**2"
+    "# Some great Unix utilities:\n",
+    "\n",
+    "## Vim\n",
+    "\n",
+    "vim is a great text editor. There is some start-up time to learn how to use it. There are many tutorials, such as https://danielmiessler.com/study/vim/#null and http://www.openvim.com/, that will be extremely helpful to the computational researcher. Some basic essentials are shared below. \n",
+    "\n",
+    "### 'Normal' and 'insert' modes\n",
+    "\n",
+    "Some basics: When you first open a file with vim, you will be in 'normal' mode. To enter text, you need to be in 'insert' mode. Type `i` to enter insert mode. When you are done typing (or pasting from your buffer), press `esc` to return to 'normal' mode. \n",
+    "\n",
+    "There are other ways to enter insert mode. Typing 'o' will enter insert mode on a new line below your curser, while 'O' will enter insert mode on a new line above your curser.\n",
+    "\n",
+    "FYI: the tutorials will show you ways of entering words or characters with a specified number of repeats, replacing a letters or words (without having to go in and out of insert mode), and more time-saving tips. \n",
+    "\n",
+    "### Navigation\n",
+    "\n",
+    "* Arrow keys will move the cursor in either mode. I always use them instead of `h`, `j`, `k`, and `l`, which move the cursor only in normal mode, for obvious reasons. All the shortcuts below work only in normal mode, for the same reason.\n",
+    "* `G` will navigate to the bottom line; gg to the first line. Typing a number and enter will move your curser down that number of lines.\n",
+    "* `$` brings you to the end of the current line; `0` to the beginning\n",
+    "\n",
+    "FYI: tutorials and 'cheatsheets' will show you may more time-saving navigation tricks, e.g. skipping to the next word, etc.\n",
+    "\n",
+    "### Copy and Paste\n",
+    "\n",
+    "There is a different vim buffer from your computer copy and paste buffer. If you copy some text from another window."
    ]
   },
   {
