--- a/source/notebooks/lecture01_intro.ipynb
+++ b/source/notebooks/lecture01_intro.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Welcome to ChE 696, On-Ramp to Data Science!\n",
     "\n",
-    "## Topics for today:\n",
+    "### Topics for today:\n",
     "- Motivation for this class\n",
     "- What is data science?\n",
     "- What we will cover in this class\n",
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Some of the many reasons to learn Data Science (DS)\n",
+    "## Some of the many reasons to learn Data Science (DS)\n",
     "\n",
     "Many motivations--you each likely have them. My and the departments reasons include:\n",
     "- We all have greater and greater amounts of data, and thus would benefit from skills to extract meaning and advance our work\n",
@@ -58,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# What is Data Science?\n",
+    "## What is Data Science?\n",
     "\n",
     "Definitions vary; Big Data often defined by four \"V\"s (initially 3; Veracity is the newcomer)\n",
     "https://www.michigandaily.com/section/research/big-data-how-university-michigan-navigates-ethics-unpredictability-data-science\n",
@@ -77,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# What is the path to \"Data Acumen\"?\n",
+    "## What is the path to \"Data Acumen\"?\n",
     "\n",
     "NAS reports inform this course and the following in the sequence. They suggest that DS curricula focus on:\n",
     "- Strong analytical basis\n",
@@ -104,7 +104,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# What resources are available at Michigan?\n",
+    "## What resources are available at Michigan?\n",
+    "\n",
     "This course complements excellent computational and DS resources at Michigan. Under the umbrella of Advanced Research Computing (ARC, http://arc.umich.edu/). Sign up for the newsletter (form at bottom of the page) to find out about upcoming events.\n",
     "* Michigan Institute for Computational Discovery and Engineering (MICDE), http://micde.umich.edu/\n",
     "     * Offers both a certificate and PhD that can be earned in parallel to your primary grad degree, http://micde.umich.edu/academic-programs/\n",
@@ -119,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Why did we add this course and what will we cover?\n",
+    "## Why did we add this course and what will we cover?\n",
     "\n",
     "This course aims to create a new tributary in data science. Most engineering core curricula (aside from CS) do not include the following topics that are prereqs for DS and ML learning courses, including:\n",
     "\n",
@@ -140,13 +141,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Course logistics\n",
+    "## Course logistics\n",
     "\n",
     "- This is meant to be a practical class to provide skills to improve your productivity in future endeavors\n",
     "- Please bring a laptop to each class. If you do not have one, please find a buddy with a laptop to work with\n",
     "- We will be using a variety of resources, primarily free to the public or free to you via the Michigan library\n",
     "- HW will be assigned approximately every week, highlighting key concepts from the in-class material and related text\n",
-    "- Grading will be 20% class engagement (in-class and/or piazza), 40% HW (approx 10 assignements), and 40% quizes (approx. 4). Final grades will be based on a demonstration of mastery of the material (A = formed an excellent foundation; B = good foundation with gaps in a few areas; C = some understanding with significant gaps)\n",
+    "- Grading will be 25% class engagement (in-class and/or piazza and/or study groups), 25% HW, 20% project, and 30% final exam. Final grades will be based on a demonstration of mastery of the material (A = formed an excellent foundation; B = good foundation with gaps in a few areas; C = some understanding with significant gaps)\n",
     "- All questions should be posted to Piazza, unless they truly only relate to you (e.g. illness, conflict...; then directly email me) so everyone can benefit from the discussion. "
    ]
   },
@@ -154,7 +155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Next up....\n",
+    "## Next up....\n",
     "\n",
     "Intro to bash!"
    ]
