--- a/source/notebooks/lecture00_intro.ipynb
+++ b/source/notebooks/lecture00_intro.ipynb
@@ -147,7 +147,7 @@
     "- Please bring a laptop to each class. If you do not have one, please find a buddy with a laptop to work with\n",
     "- We will be using a variety of resources, primarily free to the public or free to you via the Michigan library\n",
     "- HW will be assigned approximately every week, highlighting key concepts from the in-class material and related text\n",
-    "- Grading will be 25% class engagement (in-class and/or piazza and/or study groups), 25% HW, 20% project, and 30% final exam. Final grades will be based on a demonstration of mastery of the material (A = formed an excellent foundation; B = good foundation with gaps in a few areas; C = some understanding with significant gaps)\n",
+    "- Grading will be 25% class engagement (in-class and/or piazza and/or study groups), 25% HW, 20% project, 10% midterm exam, and 30% final exam. Final grades will be based on a demonstration of mastery of the material (A = formed an excellent foundation; B = good foundation with gaps in a few areas; C = some understanding with significant gaps)\n",
     "- All questions should be posted to Piazza, unless they truly only relate to you (e.g. illness, conflict...; then directly email me) so everyone can benefit from the discussion. "
    ]
   },
