--- a/source/notebooks/lecture01_shell.ipynb
+++ b/source/notebooks/lecture01_shell.ipynb
@@ -186,7 +186,7 @@
     "\n",
     "If you want to cut and paste within your file in vim, vim offers additional functionality. `d` stands for delete and acts like cutting; `y` for yank and acts like copying; `p` is for paste.\n",
     "\n",
-    "Enter `dd` or `yy` to delete or copy one line. If you want to perform the operation on the current line plus the next 2 lines, type `d3` and then enter/return (no enter/return is needed with just `dd`). Whether deleted or yanked, those line(s) will now be in vim's buffer. `p` will place those lines below your cursor. Before pasting, you can move your cursor as desired. You can paste multiple types by entering a number before `p`, e.g. `10p` to past the line(s) 10 times.\n"
+    "Enter `dd` or `yy` to delete or copy one line. If you want to perform the operation on the current line plus the next 2 lines, type `d3` and then enter/return (no enter/return is needed with just `dd`). Whether deleted or yanked, those line(s) will now be in vim's buffer. `p` will place those lines below your cursor. Before pasting, you can move your cursor as desired. You can paste multiple types by entering a number before `p`, e.g. `10p` to paste the line(s) 10 times.\n"
    ]
   },
   {
