Added material for jupyter notebook discussion

--- a/source/notebooks/lecture01_shell.ipynb
+++ b/source/notebooks/lecture01_shell.ipynb
@@ -10,7 +10,9 @@
     "\n",
     "*Related text*: Chapter 1 of [Introduction to Scientific and Technical Computing](http://www.crcnetbase.com/isbn/978-1-4987-4506-2)\n",
     "\n",
-    "*Optional related tutorial:* http://swcarpentry.github.io/shell-novice/"
+    "*Optional related tutorials:* \n",
+    "http://swcarpentry.github.io/shell-novice/\n",
+    "https://danielmiessler.com/study/vim/#null"
    ]
   },
   {
@@ -121,7 +123,9 @@
     "export CLICOLOR=1\n",
     "export LS_COLORS='di=1;35'\n",
     "```\n",
-    "The first line turns on color coding (e.g. use different colored text for files and directories), and the second defines colors to use. There are many options for defining colors, and many suggestions. This happens to the be choice I use. An internet search will provide many alternate suggestions.\n",
+    "The first line turns on color coding (e.g. use specified colored text for directories, etc.), and the second defines colors to use. Here \"di\" stands for directories, and the numbers after that mean bold;purple (you do not need to memorize these numbers!).\n",
+    "\n",
+    "There are many options for defining colors, and many suggestions. This happens to the be choice I use. An internet search will provide many websites with details on the codes and alternate suggestions (for example, http://www.bigsoft.co.uk/blog/2008/04/11/configuring-ls_colors).\n",
     "\n",
     "You can also set up aliases to save time. e.g.:\n",
     "```\n",
@@ -131,7 +135,7 @@
     "This lets me quickly launch vmd from my command line.\n",
     "\n",
     "*Pro tip*: `.bash_profile` and `.bashrc` are only loaded when a new bash instance in launched. To take the changes take place immediately, check the file in with `. .bash_profile` (since this file will launch .bashrc, both do not need to be checked in). \n",
-    ">   *FYI*: It will only be checked in for that shell. If several instances were open before the change was made, the file needs to be check in for each, or the instance closed and reopened."
+    ">   *FYI*: It will only be checked in for that shell. If several instances were open before the change was made, the file needs to be checked in for each, or the instance closed and reopened."
    ]
   },
   {
@@ -163,7 +167,7 @@
     "\n",
     "In the normal mode, `u` undoes the last action. `.` repeats the last action.\n",
     "\n",
-    "FYI: the tutorials will show you ways of entering words or characters with a specified number of repeats, replacing a letters or words (without having to go in and out of insert mode), and more time-saving tips. There are also other modes, such as the visual mode, which can be handy in selecting/inserting/deleting text, especially column-wise\n",
+    "FYI: the tutorials will show you ways of entering words or characters with a specified number of repeats, replacing a letters or words (without having to go in and out of insert mode), and more time-saving tips. There are also other modes, such as the visual mode, which can be handy in selecting/inserting/deleting text, especially column-wise.\n",
     "\n",
     "### Navigation\n",
     "\n",
@@ -225,9 +229,8 @@
     "\n",
     "echo 'May I have @@@num bananas?' > ${name}.tpl\n",
     "\n",
-    "for job in $(seq $first $incr $last); do\n",
-    "#for job in \"A B\"; do\n",
-    "    sed \"s/@@@num/$job/\" <  ${name}.tpl > ${name}_${job}.txt\n",
+    "for job in $(seq $\n",
+    "    sed \"s/@@@num/${job}/\" <  ${name}.tpl > ${name}_${job}.txt\n",
     "    cat ${name}_${job}.txt\n",
     "done"
    ]
@@ -236,17 +239,116 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The shebang \n",
+    "### The shebang and more\n",
     "\n",
-    "`#!` is colloquially called the shebang. It is not strictly necessary in this case, but is good practice. If it were not included, the script would be run as a bash script if your shell is bash. However, including this in your script will ensure it is run as a bash script even if your shell is tsch, etc. It will also specify which bash instance will be used to run the script. \n",
+    "Before running this code, let's look at the parts. `#!` is colloquially called the shebang. It is not strictly necessary in this case, but is good practice. If it were not included, the script would be run as a bash script if your shell is bash. However, including this in your script will ensure it is run as a bash script even if your shell is tsch, etc., with a shortcut (see below). It will also specify which bash instance will be used to run the script. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`echo` followed by the redirect symbol (`>`) will put the echoed text into a file. The strings `first=`, etc., define variable names. Variables are then used by typing the `$` and then the variable name. \n",
     "\n",
-    "Alternately, you can specify how the script is running by explicitly envoking it in the command line: `bash bananas.sh`.\n",
+    "You do not need to enclose the variable name in curley braces (`{}`) unless there is a special character in the name (e.g. a space) but it is good practice as it can make it more readable and it never hurts to include them, but sometimes can hurt to exclude them."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How do you run this script? Try:"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "$ ./bananas.sh"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above is a shortcut to running any executable in the current folder. \n",
     "\n",
-    "By including the shebang, we can save a few keystrokes by instead entring `./bananas.sh`\n",
+    "Did it work? Probably not. Before you can run a script, the computer has to know that it is an executible. We do that with the command `chmod`. This is a powerful command that can change read (r), write (w), and excute (x) abilities for everyone, a group, and yourself. Before changing access, see what it is by typing `ls -l bananas.sh`. Now, make the file an excutable by entering:"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "$ chmod +x bananas.sh"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now see how the permissions have changed by typing `ls -l bananas.sh`, and then try excuting the file again with the command `./bananas.sh`. \n",
     "\n",
-    "Did that not work? If so, that is because the computer didn't know that it should treat the file as an executable. We can easily fix that with this command: `chmod +x bananas.sh`\n",
+    "*FYI:* you can also run the script by entering the command `bash bananas.sh`. That's just more typing, though!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Note:** The double quotes (`\" \"`) are important when you want to use a variable inside the quote, because it will allow the variable to be interpreted. What happens if you change the double-quotes on the line starting with `sed` to single-quotes? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are multiple very handy ways to loop through values. Above was an numerical loop, with the first and last numbers explicitly entered at the top of the file, as well as the increment value. Here are some other examples of loops. What changes should be made to the text below?"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "#!/usr/bin/env bash\n",
     "\n",
-    "That only has to be done once. `chmod` can be used for changing multiple type of permissions. Those other options are beyond our scope for now."
+    "for student in Agnes Alex Alyssa; do\n",
+    "    echo 'May ${student} have some bananas?'\n",
+    "done"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It can be very handy to have lines of a text file be the list that is iterated. I have a file named `students.txt`, with line name per line, such as \n",
+    "```\n",
+    "Agnes\n",
+    "Alex\n",
+    "Alyssa\n",
+    "Carolina\n",
+    "Chloe\n",
+    "Christina\n",
+    "...\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "#!/usr/bin/env bash\n",
+    "  \n",
+    "for student in $( < students.txt); do\n",
+    "    echo \"May ${student} have some bananas?\"\n",
+    "done"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "With just the commands listed here on this brief intro to bash scripting, you can make templates and thus automate many repative tasks!"
    ]
   },
   {
