--- a/source/notebooks/lecture00_intro.ipynb
+++ b/source/notebooks/lecture00_intro.ipynb
@@ -29,10 +29,10 @@
     "- We want to make learning data science accessible to engineers by condensing multiple prerequisites into one semester\n",
     "\n",
     "From https://www.nytimes.com/2017/11/01/education/edlife/stem-jobs-industry-careers.html:\n",
-    "![Jobs](images/lect01_NYTJobs.png)\n",
+    "![Jobs](images/lect00_NYTJobs.png)\n",
     "\n",
     "From https://www.nytimes.com/2017/11/03/education/edlife/choosing-a-college-major.html:\n",
-    "![LifetimeEarnings](images/lect01_NYTEarnings.png)\n"
+    "![LifetimeEarnings](images/lect00_NYTEarnings.png)\n"
    ]
   },
   {
@@ -51,7 +51,7 @@
     "> https://www.nap.edu/catalog/25104/data-science-for-undergraduates-opportunities-and-options\n",
     "\n",
     "Favorite metaphor from the reports: \n",
-    "![watershed](images/watershed.png)\n"
+    "![watershed](images/lect00_watershed.png)\n"
    ]
   },
   {
@@ -62,15 +62,15 @@
     "\n",
     "Definitions vary; Big Data often defined by four \"V\"s (initially 3; Veracity is the newcomer)\n",
     "https://www.michigandaily.com/section/research/big-data-how-university-michigan-navigates-ethics-unpredictability-data-science\n",
-    "![DSVs](images/lect01_michigan_big_data.jpg)\n",
+    "![DSVs](images/lect00_michigan_big_data.jpg)\n",
     "\n",
     "Data science as a multidisciplinary set of skills:\n",
     "http://drewconway.com/zia/2013/3/26/the-data-science-venn-diagram\n",
-    "![DSVenn](images/Data_Science_VD.png)\n",
+    "![DSVenn](images/lect00_Data_Science_VD.png)\n",
     "\n",
     "Data science as a process:\n",
     "https://medium.com/the-mission/deconstructing-data-science-breaking-the-complex-craft-into-its-simplest-parts-15b15420df21\n",
-    "![DSProcess](images/DataSciDecontruct.jpg)"
+    "![DSProcess](images/lect00_DataSciDecontruct.jpg)"
    ]
   },
   {
